# hdd

./: .gitignore  pyproject.toml
hdd/: Core.py  __init__.py  command.py  snippet.py
hdd/bootstrap/: __init__.py  boot_providers.py  register_alias.py  register_providers.py
hdd/config/: core_config.json
hdd/interface/: abs.py
hdd/ioc/: __init__.py  container.py
hdd/service/: __init__.py  config.py  core.py  event.py  model.py  other.py  pipeline.py  test.py
hdd/templates/: entry.py  main.py  pyproject.toml
hdd/templates/bootstrap/: __init__.py  main.py
hdd/templates/config/: core_config.json  project_config.json
hdd/templates/utils/: type_protocol.py
