[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hdd"
dynamic = ["version"]
description = "A tools package"
authors = [{ name = "Metaer" }]
readme = ""
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tomlkit"
]

[project.scripts]
hdd = "hdd.command:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.dynamic]
version = {attr = "hdd.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["hdd*"]

[tool.setuptools.package-data]
"hdd" = ["**/*"]

