[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xxx"]

[project]
name = "xxx"
version = "0.1.0"
description = ""
readme = ""
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "hdd"
]

[[project.authors]]
name = "xxx"

[project.scripts]


[project.optional-dependencies]
dev = []
